# bcr

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: sample.conf  test.conf
packaging/: README.md  bcr.8  bcr.conf  bcr.default  build-deb.sh  changelog
packaging/maintainer-scripts/: postinst  postrm
packaging/systemd/: bcr.service
src/: config.rs  filter.rs  interface.rs  logging.rs  main.rs  nat.rs  packet.rs  ratelimit.rs  relay.rs  socket.rs
