[package]
name = "bcr"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Modern, fast broadcast relay for Linux (UDP broadcast/multicast forwarder)"

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["net", "socket", "ioctl", "poll", "user"] }
socket2 = "0.5"
pnet = "0.35"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.deb]
maintainer = "Anders Brownworth <anders-git-bcr@evantide.com>"
copyright = "2026, bcr contributors"
section = "net"
priority = "optional"
extended-description = """\
A modern, performance-optimized broadcast relay for Linux written in Rust. \
bcr relays UDP broadcast and multicast packets between network interfaces using \
AF_PACKET raw sockets, with rule-based filtering and optional NAT. It is a \
modern replacement for bcrelay from the pptpd project."""
assets = [
    ["target/release/bcr", "usr/bin/", "755"],
    ["packaging/bcr.8", "usr/share/man/man8/bcr.8", "644"],
    ["packaging/bcr.conf", "etc/bcr.conf", "644"],
    ["packaging/bcr.default", "etc/default/bcr", "644"],
    ["README.md", "usr/share/doc/bcr/README.md", "644"],
]
conf-files = ["/etc/bcr.conf", "/etc/default/bcr"]

[package.metadata.deb.systemd-units]
unit-scripts = "packaging/systemd"
enable = false
start = false
